/*
 * SPDX-FileCopyrightText: Copyright 2024 LG Electronics Inc.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package actioncontroller;

service ActionControllerConnection {
  rpc TriggerAction(TriggerActionRequest) returns (TriggerActionResponse);
  rpc Reconcile(ReconcileRequest) returns (ReconcileResponse);
  rpc CompleteNetworkSetting(CompleteNetworkSettingRequest) returns (CompleteNetworkSettingResponse);
}

message TriggerActionRequest {
  string scenario_name = 1;
}

message TriggerActionResponse {
  int32 status = 1;
  string desc = 2;
}

message ReconcileRequest {
  string scenario_name = 1;
  PodStatus current = 2;
  PodStatus desired = 3;
}

message ReconcileResponse {
  int32 status = 1;
  string desc = 2;
}

message CompleteNetworkSettingRequest {
  string request_id = 1;
  NetworkStatus network_status = 2;
  PodStatus pod_status = 3;
  string details = 4;
}
message CompleteNetworkSettingResponse {
  bool acknowledged = 1;
}
 
enum NetworkStatus {
  OK = 0;
  ERROR = 1;
  TIMEOUT = 2;
}

enum PodStatus {
  NONE = 0;
  INIT = 1;
  READY = 2;
  RUNNING = 3;
  DONE = 4;
  FAILED = 5;
  UNKNOWN = 6;
}